<resources>
    <string name="app_name">CarDetailingApp</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="create_account">create account</string>
    <string name="sign_in">sign in</string>
    <string name="or">or</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="service_name">service name</string>
    <string name="service_description">service description</string>
    <string name="service_price">service price</string>
    <string name="price">price</string>
    <string name="search_service">Search service you look for!</string>
    <string name="filter_category_1">Czyszczenie całkowite</string>
    <string name="filter_category_2">Woskowanie</string>
    <string name="filter_category_3">Korekta lakieru</string>
    <string name="filter_category_4">Mycie</string>



</resources>